@@ -1,3 +1,7 @@
+2022-03-26  Sam Steingold  <sds@gnu.org>
+	* lisp/bbdb-mua.el (bbdb-message-header): For Gnus consider the
+	parent summary buffer. (Bug#54423)
+
 2022-03-26  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb.el, lisp/bbdb-site.el.in, lisp/bbdb-com.el,
 	lisp/bbdb-mua.el, lisp/bbdb-tex.el: Use user-error where
